[package]
name = "rocker"
version = "0.0.1"
edition = "2021"
description = "Simple Rust Implementation of Docker CLI."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.17", features = ["derive", "env", "wrap_help"] }
futures = "0.3.30"
reqwest = { version = "0.12.7", features =["http2", "json"]}
shiplift = "0.7.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# openssl = { version = "0.10", features = ["vendored"] }